@@ -1,6 +1,7 @@
 # colourmap for temperature slices
 #COLOR_MODEL = RGB
 #
+-50	0	0	255	-40	0	0	255
 -40	0	0	255	-35	0	0	255
 -35	0	90	255	-30	0	90	255
 -30	0	120	255	-25	0	120	255
@@ -11,6 +12,6 @@
 -5	0	255	255	-1	0	255	255
 -1	255	180	0	0	255	180	0 
 0	255	0	0	1	255	0	0
-B	0	0	255
+B	255	255	255
 F	255	255	255
 N	255	255	255
